<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".view.activities.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@color/white"
        app:civ_border_color="#313E3E3E"
        app:civ_border_width="14dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/name_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail_avatar" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

    <TextView
        android:id="@+id/titleCompany"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/company_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_work_24"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/titleRepos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:text="@string/repository_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_folder_24"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/titleCompany"
        app:layout_constraintRight_toLeftOf="@id/titleLocation"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/titleLocation"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:drawablePadding="4dp"
        android:text="@string/location_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_map_24"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCompany"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_detail_repo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/tv_detail_company"
        app:layout_constraintRight_toLeftOf="@id/tv_detail_location"
        app:layout_constraintTop_toBottomOf="@id/titleRepos"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLocation"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintGuide_begin="350dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/secondaryText"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_bg_1"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:backgroundTint="#E53935"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@null" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>